# XRay_MonteCarlo

./: CMakeLists.txt  all_variations.cpp  photon_distribution.cpp  solution.cpp
HELPERS/: FLAT_FIELD.txt  RESULTS.txt  a.out  constants_generator.py  efficiency_generator.py  find_test.cpp  intrinsics_test.cpp  photon_visualizer.py  results_visualizer.py  source_detector_visualizer.py
HELPERS/efficiency_data/: CsI_ef.csv  CsI_en.csv  Se_ef.csv  Se_en.csv
HELPERS/efficiency_data/compound_data/: CsI.csv  Se.csv
HELPERS/materials_data/attenuations/: water.txt
HELPERS/ph_vis_data/: finite_dims.txt
RESULTS/: ELLIPSOID.txt  image_0-1.txt  image_00.txt  image_01.txt  image_1-1.txt  image_10.txt  image_11.txt  image_2-1.txt  image_20.txt  image_21.txt  image_3-1.txt  image_30.txt  image_31.txt  results_visualizer.py
RESULTS/doses/: doses_0-1.txt  doses_00.txt  doses_01.txt  doses_1-1.txt  doses_10.txt  doses_11.txt  doses_2-1.txt  doses_20.txt  doses_21.txt  doses_3-1.txt  doses_30.txt  doses_31.txt
RESULTS/spectra/: visualize_spectra.py
TESTS/: CMakeLists.txt  geometry_test.cpp  photons_test.cpp  scene_test.cpp  scene_test_2.cpp  utilities_test.cpp
